--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,7 +11,7 @@
           <a class="nav-link" href="/listings">All Listing</a>
           <a class="nav-link" href="/listings/new">Add New Listing</a>
         </div>
-        <div class="navbar-nav ms-auto">
+        <div class="navbar-nav ms-auto" style="margin-top: -0.5rem;">
           <% if(!currUser){ %>
           <a class="nav-link" href="/signup">Signup</a>
           <a class="nav-link" href="/login">Login</a>
