--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -83,9 +83,11 @@
                         <p class="card-text"><%= review.comment %></p>
                         <p class="card-text" > <%= review.rating %> Stars</p>
                     </div>
+                    <% if(currUser){ %>
                     <form class="mb-3" action="/listings/<%= list._id%>/review/<%= review._id %>?_method=DELETE" method="POST">
                         <button class="btn btn-sm btn-dark" >Delete</button>
                     </form>
+                    <% } %>
                 </div>
             <% } %>
         </div>
