--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -59,9 +59,23 @@
                 <h4>Leave a Review</h4>
                 <form method="POST" action="/listings/<%= list.id %>/review" novalidate class="needs-validation">
                     <div class="mt-3">
-                        <label class="form-label" for="rating">Rating</label>
-                        <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+                        <legend class="form-label" for="rating">Rating</legend>
+                        <fieldset class="starability-slot">
+                            <!-- <legend>First rating:</legend> -->
+                            <input type="radio" class="input-no-rate" value="1" name="review[rating]" id="rating" checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
                     </div>
+                    <br>
                     <div class="mb-3">
                         <label class="form-label" for="comment">Comment</label>
                         <textarea required class="form-control" name="review[comment]" id="comment" cols="30" rows="5"></textarea>
@@ -80,8 +94,9 @@
                     <div class="card-body">
                         <b><p class="card-title">Posted By: <%= review.author.username %></p></b>
                         <% console.log(review.author.username); %>
+                        <p class="starability-result" data-rating=<%= review.rating %>>Rated: 3 stars</p>
                         <p class="card-text"><%= review.comment %></p>
-                        <p class="card-text" > <%= review.rating %> Stars</p>
+                        <!-- <p class="card-text" > <%= review.rating %> Stars</p> -->
                     </div>
                     <% if(currUser){ %>
                     <form class="mb-3" action="/listings/<%= list._id%>/review/<%= review._id %>?_method=DELETE" method="POST">
