--- a/views/layout/boilerplates.ejs
+++ b/views/layout/boilerplates.ejs
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>WanderLust</title>
     <link rel="stylesheet" href="/css/raiting.css">
+    <style>         
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: rgb(179, 135, 135);
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <%- include('../includes/navbar.ejs') %>
